--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,6 +11,8 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <title>Chat Application</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 </head>
 
 <body>
